fix nav submenu spacing and background

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -350,23 +350,24 @@ div.collapse.navbar-collapse > ul.nav > li.page-scroll:hover > ul.nav-sub-menu, 
 // nav sub item list
 div.collapse.navbar-collapse > ul.nav > li.page-scroll > ul.nav-sub-menu {
   position: absolute;
-  top: 50px;
+  top: 60px;
   left: 5px;
   background: white;
   min-width: 200px;
   z-index: 1000;
   display: none;
-  padding-inline-start: 20px;
+  padding-inline-start: 10px;
 }
 
 // nav sub menu items
 div.collapse.navbar-collapse > ul.nav > li.page-scroll > ul.nav-sub-menu > li {
- margin: 10px;
+ margin: 20px 0px;
 }
 
 // nav sub menu a links
 div.collapse.navbar-collapse > ul.nav > li.page-scroll > ul.nav-sub-menu > li > a {
- padding: 20px 0px;
+  margin: 20px 0px;
+  padding: 10px;
 }
 
 // images
